fix: antiscroll on firefox

--- a/app/style/components/mention-suggestions.less
+++ b/app/style/components/mention-suggestions.less
@@ -31,9 +31,12 @@
   display: flex;
   max-height: 148px;
   flex: 1;
-  flex-direction: column-reverse;
+  //flex-direction: column-reverse;
+  flex-direction: column;
   padding: 4px 0;
   cursor: pointer;
+  overflow-x: hidden;
+  overflow-y: scroll;
   white-space: nowrap;
 
   &__item {
